<resources>
    <string name="app_name">Unitracker2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_subject">Add subject</string>
    <string name="subject">Subject</string>
    <string name="time">Time</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="stop">Stop</string>
    <string name="total_time">Total:</string>
    <string name="today_time">Today:</string>
    <string name="week_time">Week:</string>
    <string name="month_time">Month:</string>
    <string name="edtSuject_cant_be_null">The subject field cannot be empty</string>
</resources>
