<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <EditText
        android:id="@+id/dAddSubject_edt_subject"
        android:inputType="text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/subject" />

    <EditText
        android:id="@+id/dAddSubject_edt_time"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/time"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dAddSubject_btn_cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/dAddSubject_btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"/>

    </LinearLayout>
</LinearLayout>
