<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:paddingTop="14dp"
    android:orientation="vertical">>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:paddingTop="68dp"
            android:id="@+id/chronometer_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="37sp"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:text="@string/subject"
            android:elevation="2dp"
            android:gravity="center_horizontal"/>

        <Chronometer
            android:id="@+id/chronometer"
            android:format="%s"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:layout_below="@+id/chronometer_subject"
            android:elevation="2dp"
            android:textColor="#FFF"
            android:gravity="center_horizontal"/>

        <Button
            android:id="@+id/stop_chronometer"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:background="@drawable/round_button"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <TextView
            android:text="@string/today_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:theme="@style/textTimeTheme"/>

        <TextView
            android:id="@+id/chronometer_todayTime"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:theme="@style/textTimeTheme"/>

        <TextView
            android:layout_below="@id/chronometer_todayTime"
            android:text="@string/week_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/textTimeTheme"/>

        <TextView
            android:id="@+id/chronometer_weekTime"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chronometer_todayTime"
            android:layout_alignParentRight="true"
            android:theme="@style/textTimeTheme"/>

        <TextView
            android:layout_below="@id/chronometer_weekTime"
            android:text="@string/month_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/textTimeTheme"/>

        <TextView
            android:id="@+id/chronometer_mothTime"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chronometer_weekTime"
            android:layout_alignParentRight="true"
            android:theme="@style/textTimeTheme"/>

        <TextView
            android:layout_below="@id/chronometer_mothTime"
            android:text="@string/total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/textTimeTheme"/>

        <TextView
            android:id="@+id/chronometer_totalTime"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content"
            android:layout_below="@id/chronometer_mothTime"
            android:theme="@style/textTimeTheme"/>
    </RelativeLayout>

</LinearLayout>
